added explanation & text colour

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
 <body>
     <h2>Background Changer</h2>
+
+    <div id="text-container">
+        <a>
+            This browser application allows you to preview different
+            color combinations against the backdrop of an uploaded image,
+            which includes a transparent background.
+        </a>
+    </div>
+
     <div id="image-container">
         <div id="image-wrapper">
             <img id="uploaded-image" src="img/door.png" alt="Uploaded Image" style="max-width:100%; max-height: 60vh;">
